[dev] add sample reports

--- a/8_3_2020-14_3_2020/sample_8_3_2020-14_3_2020.md
+++ b/8_3_2020-14_3_2020/sample_8_3_2020-14_3_2020.md
@@ -31,7 +31,7 @@ or
 
 ​	*This week I am not productive, because I wasted most of my time doing CSC4150 homework. (and so on, ...)*
 
-##### Work for Next Week
+## Work for Next Week
 
 - Work 1: description
 - Work 2: description
